--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,17 @@
     src: url(../fonts/Bastian.ttf);
 }
 
+/* background color for entire app */
 body {
     background-color: rgb(208, 255, 208);
 }
 
+/* padding for container to center it horizontally */
 .container {
     padding-top: 150px;
 }
 
+/* header styling */
 h2 {
     font-family: "bastian";
 }
@@ -34,7 +37,7 @@ h3 {
     margin-top: 100px;
 }
 
-
+/* padding for each form page to center and align properly */
 .three {
     padding-left: 100px;
 }
@@ -43,6 +46,7 @@ h3 {
     padding-left: 100px;
 }
 
+/* button styling */
 .buttons {
     position: absolute;
     display: inline-block;
@@ -73,5 +77,3 @@ h3 {
 .one {
     display: block;
 }
-
-
