finished meal plan section, all recipes display in meal plan. limited recipes to 3 and disabled some user input areas for better UX

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,10 +62,6 @@ h3 {
     margin-top: -350px;
 }
 
-.button {
-    width: 150px;
-}
-
 /* hide all screens to begin */
 .screen {
     display: none;
@@ -76,22 +72,29 @@ h3 {
     display: block;
 }
 
-
 /* create meal plan styling */
 
 .column {
-    display: none;
     border: solid black 3px;
 }
 
 .columns {
-    padding:100px;
-    height: 1000px;
+    padding: 100px;
+    height: auto;
 }
 
 #recipe-image {
-    padding: 100px;
+    padding: 120px;
     border: solid green 5px;
+}
+
+#recipe-image::after {
+    content: "recipe image";
+}
+
+#recipe-url {
+    padding: 100px;
+    border: solid yellow 5px;
 }
 
 #recipe-image::after {
@@ -100,29 +103,11 @@ h3 {
 
 #recipe-title {
     padding: 20px;
-    border: solid red 5px;
+    border: solid red 5px !important;
 }
 
 #recipe-title::after {
     content: "recipe title";
-}
-
-#recipe-steps {
-    padding: 330px 100px;
-    border: solid pink 5px;
-}
-
-#recipe-steps::after {
-    content: "recipe steps, 1. 2. 3. ";
-}
-
-#recipe-ingredients {
-    padding: 240px 100px;
-    border: solid greenyellow 5px;
-}
-
-#recipe-ingredients::after {
-    content: "recipe ingredients";
 }
 
 h1 {
@@ -132,6 +117,7 @@ h1 {
 }
 
 .button {
+    width: 150px;
     border: 3px solid #88CA5E !important;
     border-radius: 100px !important;
     transition: all 0.5s ease 0s;
@@ -141,20 +127,16 @@ h1 {
     width: 200px;
     height: 65px;
 }
+
 #reg-later {
     width: 200px;
     height: 65px;
 }
 
 .button:hover {
-    color: black;
     background: #D2FBA4;
     border-color:  #88CA5E !important;
     transition: all 0.5s ease 0s;
-}
-
-.create-meal-plan {
-    display: none !important;
 }
 
 #editBtn {
@@ -165,4 +147,8 @@ h1 {
 
 .saveModal {
     background-color: #88CA5E !important;
+}
+
+#cmpCard {
+    border: solid green 5px;
 }
